--- a/Aula01/trabalhando_com_html/2_trabalhando_com_textos.html
+++ b/Aula01/trabalhando_com_html/2_trabalhando_com_textos.html
@@ -9,5 +9,5 @@
 <p>Esse é um parágrafo de texto.</p>
 <h1>Esse é um H1. </h1> 
 <h2>Esse é um H2.</h2>
-<p><strong>Esse é um texto em negrito.</strong></p>
+    <strong>Esse é um texto em negrito.</strong>
 </body>
