--- a/Aula01/trabalhando_com_html/index.html
+++ b/Aula01/trabalhando_com_html/index.html
@@ -13,7 +13,13 @@
 
     <ul>
         <li><a href="1_estrutura_basica.html">1_estrutura_basica.html</a></li>
-        <li><a href="2_trabalhando_com_textos.html">2_trabalho_com_textos.html</a></li>
+        <li><a href="2_trabalhando_com_textos.html">2_trabalhando_com_textos.html</a></li>
+        <li><a href="3_listas.html">3_listas.html</a></li>
+        <li><a href="4_links_e_imagens.html">4_links_e_imagens.html</a></li>
+        <li><a href="5_formularios.html">5_formularios.html</a></li>
+        <li><a href="6_tabelas.html">6_tabelas.html</a></li>
+        <li><a href="7_elementos_semanticos.html">7_elementos_semanticos.html</a></li>
+        <li><a href="8_desafio_cv.html">8_desafio_cv.html</a></li>
     </ul>
 </body>
 </html>
