--- a/Aula01/trabalhando_com_html/8_desafio_cv.html
+++ b/Aula01/trabalhando_com_html/8_desafio_cv.html
@@ -73,7 +73,7 @@ Início: Novembro de 2023 - Término: Abril de 2024
     <li>Projetar e implementar redes de telecomunicações em fibra óptica.</li>
     <li>Configuração de ativos de rede Mikrotik, Huawei, Intelbras, Fortigate.</li>
     <li>Habilidades em servidores Linux.</li>
-    <li>Projetar e implementar sistemas de segurança eletrônica em empresas e cidades.</li>
+    <li>Projetar e implementar sistemas de segurança eletrônica para empresas e projetos cidade segura para prefeituras.</li>
     <li>Projetar e implementar sistemas de ponto a ponto via rádio.</li>
 </ul>
 </section>
