--- a/Aula01/trabalhando_com_html/8_desafio_cv.html
+++ b/Aula01/trabalhando_com_html/8_desafio_cv.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Nome Completo: Thiago Bruno Souza Andrade</h1>
-        <p>Endereço: Rua Padre Francisco Cordeiro, 84 - Santa Rita, Paraíba | Telefone: (83) 99984-6608 | Email: tbandrade85@gmail.com</p>
+    <p>
+        <h1>Thiago Bruno Souza Andrade</h1>
+        </p>
+        <p>Rua Padre Francisco Cordeiro, 84 - Santa Rita, Paraíba | (83) 99984-6608 | tbandrade85@gmail.com</p>
     </header>
 
     <section>
@@ -18,24 +20,24 @@
     <ul>    
     <li>Flynet - Suporte Técnico L3
     <br>
-    Início: 08/01/2010 - Término: 11/10/2015
+    08/01/2010 - 11/10/2015
     <br>
     </li>
     <li>
-    Responsabilidades: Projetar e implantar redes de acesso para assinante final. Implementar e configurar ativos de rede. Conceder suporte técnico para funcionarios e clientes do provedor.
+    Projetar e implantar redes de acesso para assinante final, implementar e configurar ativos de rede, conceder suporte técnico para funcionarios e clientes do provedor.
     <br>
-    Conquistas: Fazer a empresa sair da minha imaginação e tomar forma. Levar satisfação para os clientes.
+    Fazer a empresa sair da minha imaginação e tomar forma, Levar satisfação para os clientes.
     </li>
 <br>
 <li>
     Alfa Telecom - Suporte Técnico L3
     <br>
-    Início: 12/10/2015 - Término: 31/10/2019
+    12/10/2015 - 31/10/2019
     <br>
     </li>
-    <li>Responsabilidades: Trazer tecnologias atuais para a empresa.
+    <li>Trazer tecnologias atuais para a empresa.
     <br>
-        Conquistas: Fazer a empresa se tornar de um provedor de bairro para um provedor espalhado entre 3 cidades. Contribuir para a implementação de rede em fibra óptica para o provedor.
+        Fazer a empresa se tornar de um provedor de bairro para um provedor espalhado entre 3 cidades. Contribuir para a implementação de rede em fibra óptica para o provedor.
     </li>
 
 </ul>
@@ -47,21 +49,21 @@
     <ul>
         <li><strong>Redes Brasil</strong> - Mikrotik do Zero ao Avançado.
         <br>
-    Início: Dezembro de 2019 - Término: Março de 2020
+    Dezembro de 2019 - Março de 2020
 </li>
 <br>
 <li>
     <strong>Youcast</strong> - Treinamento prático em redes de fibra óptica
 <br>
-Início: Junho de 2018 - Término: junho de 2018
+Junho de 2018 - junho de 2018
 </li>
 <br>
 <li><strong>Udemy</strong> - BGP em roteadores Huawei
 <br>
-    Início: Janeiro de 2021 - Término: Agosto de 2021</li>
+Janeiro de 2021 - Agosto de 2021</li>
 <br>
 <li><strong>Udemy</strong> - Zabbix do Iniciante ao Avançado</li>
-Início: Novembro de 2023 - Término: Abril de 2024
+Novembro de 2023 - Abril de 2024
 </ul>
 </section>
 
@@ -79,6 +81,7 @@ Início: Novembro de 2023 - Término: Abril de 2024
 </section>
 
 
-<footer>Referências: Grupo Alfa: (83) 98121-1323 | Crucial TI: (83) 99931-1656</footer>
+
 </body>
+<footer>Referências à consultar</footer>
 </html>
