--- a/Aula01/trabalhando_com_html/8_desafio_cv.html
+++ b/Aula01/trabalhando_com_html/8_desafio_cv.html
@@ -11,35 +11,23 @@
     <p>
         <h1>Thiago Bruno Souza Andrade</h1>
         </p>
-        <p>Rua Padre Francisco Cordeiro, 84 - Santa Rita, Paraíba | (83) 99984-6608 | tbandrade85@gmail.com</p>
+        <p>Endereço: Rua Padre Francisco Cordeiro, 84 - Santa Rita, Paraíba | Telefone: (83) 99984-6608 | e-mail: tbandrade85@gmail.com</p>
     </header>
 
     <section>
-        <h2>Experiência Profissional:</h2>
+        <h2>Experiência Profissional</h2>
+        <ul>    
+    <li><strong>Empresa: Flynet</strong>
+     <br>
+     <strong>Cargo: Técnico L3</strong>
     <br>
-    <ul>    
-    <li>Flynet - Suporte Técnico L3
+    <i>Periodo: 01/2010 - 10/2015</i>
     <br>
-    08/01/2010 - 11/10/2015
+    Responsabilides e conquistas:
     <br>
-    </li>
-    <li>
-    Projetar e implantar redes de acesso para assinante final, implementar e configurar ativos de rede, conceder suporte técnico para funcionarios e clientes do provedor.
-    <br>
-    Fazer a empresa sair da minha imaginação e tomar forma, Levar satisfação para os clientes.
-    </li>
-<br>
-<li>
-    Alfa Telecom - Suporte Técnico L3
-    <br>
-    12/10/2015 - 31/10/2019
+    <i>Projetar e implantar redes de acesso para assinante final. Implementar e configurar ativos de rede. Conceder suporte técnico para funcionarios e clientes do provedor.</i>
     <br>
     </li>
-    <li>Trazer tecnologias atuais para a empresa.
-    <br>
-        Fazer a empresa se tornar de um provedor de bairro para um provedor espalhado entre 3 cidades. Contribuir para a implementação de rede em fibra óptica para o provedor.
-    </li>
-
 </ul>
 </section>
 
