--- a/Aula01/trabalhando_com_html/8_desafio_cv.html
+++ b/Aula01/trabalhando_com_html/8_desafio_cv.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-    <p>
+    <img src="./img/perfil_thiago.png" alt="" class="foto-perfil" >
+        <p>
         <h1>Thiago Bruno Souza Andrade</h1>
         </p>
         <p>Endereço: Rua Padre Francisco Cordeiro, 84 - Santa Rita, Paraíba | Telefone: (83) 99984-6608 | e-mail: tbandrade85@gmail.com</p>
@@ -71,5 +72,5 @@ Novembro de 2023 - Abril de 2024
 
 
 </body>
-<footer>Referências à consultar</footer>
+<footer>Referências disponíveis mediante solicitação.</footer>
 </html>
