--- a/Aula01/trabalhando_com_html/8_desafio_cv.html
+++ b/Aula01/trabalhando_com_html/8_desafio_cv.html
@@ -7,6 +7,7 @@
     <title>Meu Curriculo</title>
 </head>
 <body>
+    <!-- Cabeçalho da página: Dados Pessoais -->
     <header>
     <img src="./img/perfil_thiago.png" alt="" class="foto-perfil" >
         <p>
@@ -14,7 +15,7 @@
         </p>
         <p>Endereço: Rua Padre Francisco Cordeiro, 84 - Santa Rita, Paraíba | Telefone: (83) 99984-6608 | e-mail: tbandrade85@gmail.com</p>
     </header>
-
+<!-- Section 1 - Experiencias profissionais -->
     <section>
         <h2>Experiência Profissional</h2>
         <ul>    
@@ -32,7 +33,7 @@
 </ul>
 </section>
 
-
+<!-- Section 2 - Educação -->
 <section>
     <h2>Educação:</h2>
     <ul>
@@ -56,6 +57,7 @@ Novembro de 2023 - Abril de 2024
 </ul>
 </section>
 
+<!-- Section 3 - Habilidades-->
 
 <section><H2>Habilidades:</H2>
 <ul>
@@ -70,7 +72,7 @@ Novembro de 2023 - Abril de 2024
 </section>
 
 
-
 </body>
+<!-- Rodapé - Referêcias -->
 <footer>Referências disponíveis mediante solicitação.</footer>
 </html>
